<resources>
    <string name="app_name">Demo</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="get_todos">get todos</string>
    <string name="flow">Flow</string>
    <string name="channels">Channels</string>
    <string name="camera_x">Camera X</string>
    <string name="start">start</string>
    <string name="coroutines">Coroutines</string>
    <string name="jetpack">Jetpack</string>
    <string name="room">Room</string>
    <string name="giphy">Giphy</string>
    <string name="jetpack_paging">Jetpack Paging</string>
    <string name="send">send</string>
    <string name="new_message_hint">Type your message here</string>
    <string name="nick_name_hint">Type your nick name here</string>
    <string name="chat">Chat</string>
    <string name="notification_channel_name">barkatmenotification</string>
    <string name="notification_channel_description">barkatmenotificationdesc</string>
    <string name="test_sign_in">test sign in</string>
    <string name="auth">Authentication</string>
    <string name="decorator">decorator</string>
    <string name="patterns">Design Patterns</string>
    <string name="_2nd_pdm">2nd PDM</string>
    <string name="_1st_pdm">1st PDM</string>
    <string name="android_notification">Android notification</string>
    <string name="notification">Notification</string>
    <string name="android_notification_toast">Android notification + Toast</string>
    <string name="toast_only">Toast only</string>
    <string name="motion_layout">Motion Layout</string>
</resources>