<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_2st_pdm"
        android:checkableBehavior="single">
        <item android:title="@string/_2nd_pdm">
            <menu>
                <item
                    android:id="@+id/nav_auth"
                    android:title="@string/auth" />

                <item
                    android:id="@+id/nav_chat"
                    android:title="@string/chat" />
                <item
                    android:id="@+id/nav_patterns"
                    android:title="@string/patterns" />
                <item
                    android:id="@+id/nav_motionFragment"
                    android:title="@string/motion_layout" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group_1st_pdm"
        android:checkableBehavior="single">
        <item android:title="@string/_1st_pdm">
            <menu>
                <item
                    android:id="@+id/nav_room"
                    android:title="@string/room" />
                <item
                    android:id="@+id/nav_jetpack"
                    android:title="@string/jetpack" />
                <item
                    android:id="@+id/nav_coroutines"
                    android:title="@string/coroutines" />
            </menu>
        </item>
    </group>
</menu>