<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/notification"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/tv_android_notification"
                style="@style/simple_list_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/android_notification" />

            <TextView
                android:id="@+id/tv_android_notification_and_toast"
                style="@style/simple_list_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/android_notification_toast" />

            <TextView
                android:id="@+id/tv_toast_only"
                style="@style/simple_list_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/toast_only" />

        </LinearLayout>


    </ScrollView>
</layout>